--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.html
@@ -1,59 +1,37 @@
-<div class="d-flex permission-container p-4 mt-3">
-  <div class="d-flex flex-column roles-list">
+<div class="d-flex permission-wrapper">
+  <div class="d-flex flex-column roles-list p-4">
     <div class="role-list">
       <div class="d-flex flex-column">
-        <span class="d-flex cursor-pointer mb-3" (click)="addPermission()" id="addNewRole" *ngIf="edit.status">
-          <i class="dsi dsi-plus-circle mr-2 icon-primary"></i>
-          <span class="text-primary fw-500 font-14">Add New</span>
-        </span>
+        <button class="btn btn-link d-flex align-items-center hover mb-3 px-0" (click)="addPermission()"
+          id="addNewRole" *ngIf="edit.status">
+          <span class="dsi dsi-plus mr-2"></span>
+          <span class="fw-500 font-14">Add New</span>
+        </button>
         <div class="d-flex flex-column roles-list-item fw-500 font-14 text-muted hover mb-2"
           (click)="onSelectRole(role, i)" *ngFor="let role of roles | filterRole: searchRole; let i = index"
           [ngClass]="{ 'active': i == selectedRoleIndex }">
           <div class="d-flex h-100">
-            <!-- <div class="d-flex align-items-center justify-content-center text-secondary symbol-holder" id="viewRole">
-              <span class="dsi dsi-view mr-2" *ngIf="!canManage(i)"></span>
-              <span class="odp-manager mr-2" *ngIf="canManage(i)"></span>
-            </div> -->
             <div class="d-flex flex-column">
               <div class="p-2 m-0 w-100 text-truncate role-name-width">
                 <span class="text-muted roles-list-heading" *ngIf="!role.name">Untitled role</span>
                 <span class="text roles-list-heading" *ngIf="role.name" [ngbTooltip]="role.name" container="body"
                   placement="top">{{ role.name }}</span>
               </div>
-              <!-- <span class="text-secondary px-2 mt-2 pb-2 roles-list-name" *ngIf="canManage(i)">
-                <div class="d-flex align-items-center">
-                  <span class="odp-add-circle mr-2" [ngClass]="{ 'color-create': permissionEnabled(i, 'POST') }"></span>
-                  <span class="odp-edit mr-2" [ngClass]="{ 'color-edit': permissionEnabled(i, 'PUT') }"></span>
-                  <span class="odp-delete mr-2" [ngClass]="{
-                      'color-delete': permissionEnabled(i, 'DELETE')
-                    }"></span>
-                  <span class="odp-approver mr-2" [ngClass]="{
-                      'color-approve':
-                        permissionEnabled(i, 'REVIEW') &&
-                        !permissionEnabled(i, 'SKIP_REVIEW')
-                    }"></span>
-                  <span *ngIf="permissionEnabled(i, 'SKIP_REVIEW')" class="fa fa-forward text-success mr-2"></span>
-                </div>
-              </span> -->
-              <!-- <span class="text-secondary px-2 mt-2 pb-2 roles-list-name" *ngIf="!canManage(i)">
-                <span class="text">{{ getViewAttributes(role.id) }} Attributes</span>
-              </span> -->
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="d-flex flex-column w-100">
+  <div class="permission-container d-flex flex-column w-100 p-4">
     <div class="d-flex flex-column">
-      <div class="d-flex">
+      <div class="d-flex align-items-center justify-content-between mb-4">
         <span class="fw-600 font-20 mb-3">{{selectedRole.name}}</span>
-        <div class="cursor-pointer d-flex ml-auto" id="roleDeleteBtn" type="button"
+        <button type="button" class="btn btn-white border d-flex align-items-center" id="roleDeleteBtn"
           *ngIf="edit.status && !selectedRole.skipReviewRole" (click)="deletePermission()">
-          <i class="dsi dsi-trash mr-2"></i>
+          <span class="dsi dsi-trash mr-2"></span>
           <span class="fw-500">Delete role</span>
-        </div>
-
+        </button>
       </div>
 
       <div class="d-flex flex-column align-items-start w-100">
@@ -61,26 +39,31 @@
           <div class="d-flex flex-column role-control input-group">
             <div class="d-flex position-relative flex-column mb-4 ">
               <span class="mb-2" [ngClass]="{'text-muted' : !edit.status}">Name</span>
-              <input *ngIf="edit.status" type="text" class="form-control" (ngModelChange)="markAsTouched(selectedRole)"
-                maxlength="40" [(ngModel)]="selectedRole.name" placeholder="Untitled role" id="roleName"
-                [disabled]="selectedRole.skipReviewRole" (keyup)="checkPermissionChange()" />
-              <span *ngIf="!edit.status" class="form-control-plaintext">{{
-                selectedRole.name
-                }}</span>
-              <span #infoTooltip="ngbTooltip" *ngIf="edit.status"
-                class="info fa fa-info-circle text-muted position-absolute" ngbTooltip="Maximum 40 chars allowed"
-                container="body" placement="right">&nbsp;</span>
+              <div class="position-relative">
+                <input *ngIf="edit.status" type="text" class="form-control"
+                  (ngModelChange)="markAsTouched(selectedRole)" maxlength="40" [(ngModel)]="selectedRole.name"
+                  placeholder="Untitled role" id="roleName" [disabled]="selectedRole.skipReviewRole"
+                  (keyup)="checkPermissionChange()" />
+                <span *ngIf="!edit.status" class="form-control-plaintext">{{
+                  selectedRole.name
+                  }}</span>
+                <span #infoTooltip="ngbTooltip" *ngIf="edit.status"
+                  class="info fa fa-info-circle text-muted position-absolute" ngbTooltip="Maximum 40 chars allowed"
+                  container="body" placement="right">&nbsp;</span>
+              </div>
             </div>
             <div class="d-flex w-100 mb-3 position-relative flex-column">
               <span class="mb-2" [ngClass]="{'text-muted' : !edit.status}">Description</span>
-              <textarea *ngIf="edit.status" class="form-control description" [(ngModel)]="selectedRole.description"
-                placeholder="Description" rows="4" [disabled]="selectedRole.skipReviewRole"
-                (keyup)="checkPermissionChange()" maxlength="250"></textarea>
-              <span *ngIf="!edit.status" class="form-control-plaintext text-break text-justify">{{
-                selectedRole.description }}</span>
-              <span #infoTooltip="ngbTooltip" *ngIf="edit.status"
-                class="info fa fa-info-circle text-muted position-absolute" ngbTooltip="Maximum 250 chars allowed"
-                container="body" placement="right">&nbsp;</span>
+              <div class="position-relative">
+                <textarea *ngIf="edit.status" class="form-control description" [(ngModel)]="selectedRole.description"
+                  placeholder="Description" rows="4" [disabled]="selectedRole.skipReviewRole"
+                  (keyup)="checkPermissionChange()" maxlength="250"></textarea>
+                <span *ngIf="!edit.status" class="form-control-plaintext text-break text-justify">{{
+                  selectedRole.description }}</span>
+                <span #infoTooltip="ngbTooltip" *ngIf="edit.status"
+                  class="info fa fa-info-circle text-muted position-absolute" ngbTooltip="Maximum 250 chars allowed"
+                  container="body" placement="right">&nbsp;</span>
+              </div>
             </div>
           </div>
 
@@ -95,7 +78,7 @@
               Dynamic Filters
             </div>
           </div>
-          <div class="tab-container d-flex align-items-start border-bottom w-100">
+          <div class="tab-container d-flex align-items-start w-100">
             <div id="tab-1" *ngIf="activeTab === 1">
               <div class="d-flex flex-column w-100 my-3">
                 <div class="d-flex flex-column">
@@ -105,81 +88,6 @@
                       {{ item.label }}
                     </option>
                   </select>
-                  <!-- <div class="level-one position-relative mb-3">
-                    <div (click)="
-                        toggleDropdown['GLOBAL'] =
-                          hasPermission('PMDSR') && edit.status
-                            ? !toggleDropdown['GLOBAL']
-                            : false
-                      " [ngClass]="{
-                        view: selectRoleType === 'view',
-                        manage: selectRoleType === 'manage',
-                        hover: hasPermission('PMDSR')
-                      }" class="rounded-dropdown-toggle d-flex align-items-center ignore-outside">
-                      <div class="icon d-flex align-items-center justify-content-center">
-                        <span *ngIf="selectRoleType === 'view'" class="dsi dsi-view"></span>
-                        <span *ngIf="selectRoleType === 'manage'" class="dsi dsi-edit"></span>
-                      </div>
-                      <div *ngIf="selectRoleType === 'view'" class="text">
-                        View
-                      </div>
-                      <div *ngIf="selectRoleType === 'manage'" class="text">
-                        Manage
-                      </div>
-                      <span *ngIf="hasPermission('PMDSR') && edit.status" class="fa fa-angle-down fa-sm"></span>
-                    </div>
-                    <div (outside)="toggleDropdown['GLOBAL'] = false" *ngIf="toggleDropdown['GLOBAL']"
-                      class="rounded-dropdown" odpClickOutside>
-                      <div (click)="
-                          toggleDropdown['GLOBAL'] = false;
-                          selectRoleType = 'view'
-                        " class="rounded-dropdown-item d-flex align-items-center">
-                        <div class="icon d-flex align-items-center justify-content-center view">
-                          <span class="dsi dsi-view"></span>
-                        </div>
-                        <div class="text">View</div>
-                      </div>
-                      <div (click)="
-                          toggleDropdown['GLOBAL'] = false;
-                          selectRoleType = 'manage'
-                        " class="rounded-dropdown-item d-flex align-items-center">
-                        <div class="icon d-flex align-items-center justify-content-center manage">
-                          <span class="dsi dsi-edit"></span>
-                        </div>
-                        <div class="text">Manage</div>
-                      </div>
-                    </div>
-                  </div> -->
-                  <!-- <div *ngIf="selectRoleType === 'manage'"
-                    class="level-two position-relative d-flex align-items-center mb-3">
-                    <div (click)="canCreate = !canCreate" [ngClass]="{
-                        checked: canCreate,
-                        disabled: !hasPermission('PMDSR') || !edit.status
-                      }" class="round-checkbox d-flex align-items-center justify-content-between mr-3">
-                      <div class="text font-weight-bold">Create</div>
-                      <div class="round-check d-flex align-items-center justify-content-center">
-                        <span class="fa fa-check"></span>
-                      </div>
-                    </div>
-                    <div (click)="canEdit = !canEdit" [ngClass]="{
-                        checked: canEdit,
-                        disabled: !hasPermission('PMDSR') || !edit.status
-                      }" class="round-checkbox d-flex align-items-center justify-content-between mr-3">
-                      <div class="text font-weight-bold">Edit</div>
-                      <div class="round-check d-flex align-items-center justify-content-center">
-                        <span class="fa fa-check"></span>
-                      </div>
-                    </div>
-                    <div (click)="canDelete = !canDelete" [ngClass]="{
-                        checked: canDelete,
-                        disabled: !hasPermission('PMDSR') || !edit.status
-                      }" class="round-checkbox d-flex align-items-center justify-content-between mr-3">
-                      <div class="text font-weight-bold">Delete</div>
-                      <div class="round-check d-flex align-items-center justify-content-center">
-                        <span class="fa fa-check"></span>
-                      </div>
-                    </div>
-                  </div> -->
                 </div>
                 <div *ngIf="selectRoleType === 'manage'" class="mt-5">
                   <div class="form-check">
@@ -236,29 +144,6 @@
                     Data Will be fine grained based on the condition you provide
                     here.
                   </small>
-                  <!-- <div *ngIf="hasConditions" class="d-flex align-items-center">
-                                        <div class="mode d-flex align-items-center mr-2"
-                                            (click)="changeSelectedMode('Basic')">
-                                            <odp-round-radio id="modeBasic"
-                                                (checkedChange)="changeSelectedMode('Basic')"
-                                                [checked]="selectedMode=='Basic'"></odp-round-radio>
-                                            <label class="mb-0 ml-2" for="modeBasic">Basic</label>
-                                        </div>
-                                        <div class="mode d-flex align-items-center mr-2"
-                                            (click)="changeSelectedMode('Advance')">
-                                            <odp-round-radio id="modeAdvance"
-                                                (checkedChange)="changeSelectedMode('Advance')"
-                                                [checked]="selectedMode=='Advance'"></odp-round-radio>
-                                            <label class="mb-0 ml-2" for="modeAdvance">Advance</label>
-                                        </div>
-                                        <div class="mode d-flex align-items-center mr-2"
-                                            (click)="changeSelectedMode('Expert')">
-                                            <odp-round-radio id="modeExpert"
-                                                (checkedChange)="changeSelectedMode('Expert')"
-                                                [checked]="selectedMode=='Expert'"></odp-round-radio>
-                                            <label class="mb-0 ml-2" for="modeExpert">Expert</label>
-                                        </div>
-                                    </div> -->
                 </div>
               </div>
               <ng-container *ngIf="hasConditions">
@@ -331,24 +216,17 @@
 
 <ng-template #deleteModal>
   <div class="modal-body p-4">
-    <div class="circle bg-dark">
-      <span class="dsi dsi-trash text-white"></span>
-    </div>
-    <p class="text-dark font-weight-bold text-center">{{ delete.title }}</p>
+    <p class="font-20 fw-600">{{ delete.title }}</p>
     <p class="text-secondary text-center">
       Are you sure you want to delete
       <strong *ngIf="delete.label">{{ delete.label }}</strong>
       <strong *ngIf="!delete.label" class="text-muted">Untitled role</strong>
     </p>
-  </div>
-  <div class="modal-footer p-3 bg-light">
-    <button type="button" class="btn btn-min-width btn-default w-50 mx-3" (click)="deleteModalRef.close(false)"
-      id="sbDeleteModalNo">
-      No
-    </button>
-    <button type="button" class="btn btn-min-width btn-dark w-50 mx-3" (click)="deleteModalRef.close(true)"
-      id="sbDeleteModalYes">
-      Yes
-    </button>
+    <div class="d-flex align-items-center justify-content-end">
+      <button type="button" class="btn btn-min-width btn-outline-primary mr-3" (click)="deleteModalRef.close(false)"
+        id="sbDeleteModalNo">No</button>
+      <button type="button" class="btn btn-min-width btn-primary" (click)="deleteModalRef.close(true)"
+        id="sbDeleteModalYes">Yes</button>
+    </div>
   </div>
 </ng-template>
