state model UX fix

--- a/src/app/home/schema-utils/state-model/state-model.component.scss
+++ b/src/app/home/schema-utils/state-model/state-model.component.scss
@@ -12,11 +12,6 @@
   #select-state-model {
     width: 30%;
 
-    input {
-      border-top-right-radius: 0 !important;
-      border-bottom-right-radius: 0 !important;
-    }
-
     ngb-typeahead-window {
       width: 100%;
 
@@ -43,26 +38,6 @@
     border-radius: 100%;
     margin-top: 1px;
   }
-
-  #configureStateModel {
-    background: #525252;
-    border-radius: 0px 2px 2px 0px;
-    color: #f9f9f9;
-    border: none;
-    font-size: 12px;
-    outline: none;
-  }
-
-  #stateModelInfo {
-    margin-top: 8px;
-
-    span {
-      background: #dedede;
-      border-radius: 2px;
-      padding: 1.1px 3.1px;
-      font-size: 10px;
-    }
-  }
 }
 
 #add-state {
@@ -72,23 +47,11 @@
 
 .new-state-section {
   min-height: 300px;
-}
 
-#new-state-input {
-  border-right: none !important;
-  border-top-right-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
-}
-
-#delete-state-model {
-  font-size: 12px;
-  text-decoration: underline;
-  cursor: pointer;
-  color: red;
-}
-
-.state-model-label {
-  font-size: 0.77rem;
+  .dsi {
+    top: 10px;
+    right: 6px;
+  }
 }
 
 .mat-standard-chip {
@@ -195,4 +158,12 @@
 
 .schema-free-message {
   min-height: 55vh;
+}
+
+
+.dropdown-item.active,
+.dropdown-item:active {
+  color: $accent;
+  text-decoration: none;
+  background-color: $white;
 }
