--- a/src/app/utils/field-type/field-type.component.html
+++ b/src/app/utils/field-type/field-type.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center">
+<div class="d-flex align-items-center text-dark">
     <span
         class="dsi dsi-bg dsi-sm {{getClass()}} rounded-circle d-flex align-items-center justify-content-center field-type-badge"></span>
     <span *ngIf="label" class="text-dark ml-2">{{getLabel()}}</span>
