--- a/src/app/home/schema-utils/maker-checker/maker-checker.component.html
+++ b/src/app/home/schema-utils/maker-checker/maker-checker.component.html
@@ -42,8 +42,8 @@
           </div>
         </div>
         <div id="configure-maker-checker" class="rounded mt-4 b">
-          <div class="edit-maker-checker p-3">
-            <div class="mt-4">
+          <div class="edit-maker-checker p-4">
+            <div class="">
               <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center steps-subtitle">
                   <strong>Steps</strong>
@@ -63,7 +63,7 @@
                 </div>
               </div>
               <div class="mt-3 b rounded">
-                <div class="steps-header b-bottom row no-gutters text-muted align-items-center">
+                <div class="steps-header b-bottom row no-gutters sub-heading align-items-center">
                   <div class="col-1 d-flex pl-4 align-items-center" *ngIf="edit.status">
                     <input type="checkbox" class="hover" [(ngModel)]="deleteAllSteps"
                       [ngModelOptions]="{ standalone: true }" (ngModelChange)="toggleDeleteAllSteps(deleteAllSteps)"
@@ -88,8 +88,8 @@
                     <ng-container [formGroupName]="i">
                       <div class="col-1 d-flex align-items-center" *ngIf="edit.status">
                         <div class="mx-2 hover">
-                          <span class="fas fa-ellipsis-v font-13 text-muted"></span>
-                          <span class="fas fa-ellipsis-v font-13 text-muted"></span>
+                          <span class="fas fa-ellipsis-v font-13 sub-heading"></span>
+                          <span class="fas fa-ellipsis-v font-13 sub-heading"></span>
                         </div>
                         <input type="checkbox" class="hover" [(ngModel)]="deleteSteps[i]"
                           [ngModelOptions]="{ standalone: true }" (ngModelChange)="checkDeleteAllSteps()"
