--- a/src/app/home/schema-utils/state-model/state-model.component.html
+++ b/src/app/home/schema-utils/state-model/state-model.component.html
@@ -10,32 +10,28 @@
             will be the starting state for the state model machine.
         </p>
 
-        <div *ngIf="!stateModelEnabled" [formGroup]="form" class='create-state-model'>
-            <div class="d-flex justify-content-start">
-                <div id='select-state-model' formGroupName="stateModel" odpClickOutside (outside)='searchTerm = "" '
-                    class='position-relative'>
+        <div *ngIf="!stateModelEnabled" [formGroup]="form" class="create-state-model">
+            <div class="d-flex align-items-center">
+                <div id="select-state-model" formGroupName="stateModel" odpClickOutside (outside)="searchTerm = '' "
+                    class="position-relative">
                     <input id="typeahead-basic" type="text" class="form-control"
                         [attr.disabled]="!edit.status ? true : null" [ngbTypeahead]="search"
                         (focus)="focus$.next($any($event).target.value)" [resultTemplate]="rt"
                         [inputFormatter]="inputFormatter" (selectItem)="selectAttribute($event.item)"
                         placeholder="Choose existing attribute or create one..." #instance="ngbTypeahead" />
                 </div>
-                <button [disabled]='!edit.status' id='configureStateModel' (click)='enableStateModel()'>
+                <button [disabled]="!edit.status" id="configureStateModel" class="btn btn-link"
+                    (click)="enableStateModel()">
                     Configure State Model
                 </button>
             </div>
-            <div id='stateModelInfo' *ngIf="!searchTerm">
-                <span>
-                    *Attributes with List of Values only
-                </span>
+            <div id="stateModelInfo" class="form-text mt-2 ml-1 text-secondary" *ngIf="!searchTerm">
+                <small>*Attributes with List of Values only</small>
             </div>
             <ng-template #rt let-r="result" let-t="term">
                 <ng-container *ngIf="r.newAttr">
-                    <div class="d-inline-flex">
-                        <span class='border-circle mr-2'>
-                            +
-                        </span>
-                        <span>Add &nbsp;</span>
+                    <div class="d-flex align-items-center">
+                        <span class="dsi dsi-plus mr-2"></span>
                         <ngb-highlight [result]="r.name" [term]="t"></ngb-highlight>
                     </div>
                     <div class="d-inline-flex">
@@ -50,84 +46,78 @@
 
         <div *ngIf="stateModelEnabled">
             <div class="d-flex justify-content-between">
-                <div id='view-state-model'>
-                    <input [attr.disabled]="true" type="text" class="form-control" [value]='StateModelAttrName'>
+                <div id="view-state-model">
+                    <input [attr.disabled]="true" type="text" class="form-control" [value]="StateModelAttrName">
                 </div>
-                <div *ngIf="edit.status" class='mt-2'>
-                    <span (click)="disableStateModel()" class='btn btn-link'>
+                <div *ngIf="edit.status" class="mt-2">
+                    <span (click)="disableStateModel()" class="btn btn-link">
                         Delete State Model
                     </span>
                 </div>
             </div>
 
-            <div class='mt-2 p-3 bg-white new-state-section'>
-
-                <div *ngIf="edit.status" class='d-flex justify-content-start'>
-                    <div class='w-50'>
-                        <input #newStateBox type="text" class="form-control" id='new-state-input'
-                            placeholder="Add State Value here"
-                            (keyup.enter)='addNewState(newStateBox.value); newStateBox.value=null;'>
-                    </div>
-
-                    <div id='add-state' (click)='addNewState(newStateBox.value); newStateBox.value=null;'>
-                        <span class="dsi dsi-plus hover"></span>
-                    </div>
+            <div class="mt-3 bg-white new-state-section">
+                <div *ngIf="edit.status" class="position-relative">
+                    <input #newStateBox type="text" class="form-control" id="new-state-input"
+                        placeholder="Add State Value here"
+                        (keyup.enter)="addNewState(newStateBox.value); newStateBox.value=null;">
+                    <span class="dsi dsi-plus hover position-absolute text-accent"
+                        (click)="addNewState(newStateBox.value); newStateBox.value=null;"></span>
                 </div>
 
-                <div class='row mt-2' *ngIf="edit.status" [hidden]='allStates.length == 0'>
+                <div class="row mt-2" *ngIf="edit.status" [hidden]="allStates.length == 0">
 
                     <div class="col-6">
-                        <span *ngIf="deleteStateCount>0" class='hover btn btn-link p-0' (click)='deleteStates()'>
+                        <span *ngIf="deleteStateCount>0" class="hover btn btn-link px-0" (click)="deleteStates()">
                             Delete selected states ({{deleteStateCount}})
                         </span>
                     </div>
                     <div class="col-6 text-right">
-                        <span class='hover btn btn-link' (click)='deleteAllNextStates()'>
+                        <span class="hover btn btn-link" (click)="deleteAllNextStates()">
                             Clear All Next States
                         </span>
                     </div>
                 </div>
 
-                <div class='mt-2'>
-                    <div class='row mb-2' [hidden]='allStates.length == 0'>
-                        <div class='col-3'>
+                <div class="mt-2">
+                    <div class="row mb-2" [hidden]="allStates.length == 0">
+                        <div class="col-3">
                             <strong>State</strong>
                         </div>
-                        <div class='col-9'>
+                        <div class="col-9">
                             <strong>Add Next State</strong>
-
                         </div>
                     </div>
 
-                    <div class='state-model-config' [sortablejs]="stateModelData"
+                    <div class="state-model-config" [sortablejs]="stateModelData"
                         [sortablejsOptions]="{sort: !!edit && !!edit.status, filter: '.disabled', onMove: sortableOnMove, onUpdate: sortableOnUpdate }">
-                        <div class='row align-items-center' *ngFor='let stateData of stateModelData; let i = index '>
-                            <div class='col-3' [ngClass]="{'mb-2': edit.status }">
-                                <div *ngIf="edit.status" class='d-inline-block'>
+                        <div class="row align-items-center" *ngFor="let stateData of stateModelData; let i = index ">
+                            <div class="col-3" [ngClass]="{'mb-2': edit.status }">
+                                <div *ngIf="edit.status" class="d-inline-block">
                                     <i class="fa fa-bars text-muted hover mr-2 fs-16"></i>
                                 </div>
-                                <div class='d-inline-block'>
-                                    <input *ngIf="edit.status" type="checkbox" class='mb-0'
-                                        [(ngModel)]='stateData.checked'>
+                                <div class="d-inline-block">
+                                    <input *ngIf="edit.status" type="checkbox" class="mb-0"
+                                        [(ngModel)]="stateData.checked">
                                 </div>
-                                <div class='state-name d-inline-block ' [ngbTooltip]="stateData.state">
+                                <div class="state-name d-inline-block " [ngbTooltip]="stateData.state">
                                     {{stateData.state}}
                                 </div>
                                 <div *ngIf="edit.status"
-                                    class='fa hover fa-times text-muted pt-1 float-right d-inline-block'
-                                    (click)='deleteStates(stateData.state)'>
+                                    class="fa hover fa-times text-muted pt-1 float-right d-inline-block"
+                                    (click)="deleteStates(stateData.state)">
                                 </div>
                             </div>
-                            <div class='col-9' [ngClass]="{'mb-2': !edit.status }">
+                            <div class="col-9" [ngClass]="{'mb-2': !edit.status }">
                                 <mat-form-field class="example-chip-list w-100" appearance="fill">
                                     <mat-chip-list #chipList aria-label="Next State selection"
-                                        [disabled]='!edit.status'>
+                                        [disabled]="!edit.status">
                                         <mat-chip *ngFor="let nextState of nextStates(stateData.state)"
                                             [selectable]="selectable" [removable]="removable"
                                             (removed)="removeNextState(nextState, stateData.state)">
                                             {{nextState}}
                                             <mat-icon matChipRemove *ngIf="removable">
-                                                <span class='fa fa-times'></span>
+                                                <span class="fa fa-times"></span>
                                             </mat-icon>
                                         </mat-chip>
                                         <input placeholder="{{ edit.status ? 'Next State...': '' }}" #chipInput
@@ -149,7 +139,7 @@
 
                                 </mat-form-field>
 
-                                <hr *ngIf="!edit.status" class='m-0 p-0'>
+                                <hr *ngIf="!edit.status" class="m-0 p-0">
                             </div>
                         </div>
 
@@ -162,8 +152,8 @@
     </ng-container>
 
     <ng-container *ngIf="isSchemaFree">
-        <div class='d-flex align-items-center justify-content-center schema-free-message'>
-            <div class='text-secondary'>
+        <div class="d-flex align-items-center justify-content-center schema-free-message">
+            <div class="text-secondary">
                 Schema Free is enabled, it restricts you from configuring the state model
             </div>
         </div>
