--- a/src/app/home/schema-utils/state-model/state-model.component.html
+++ b/src/app/home/schema-utils/state-model/state-model.component.html
@@ -1,8 +1,6 @@
 <div class='p-4'>
 
-    <div class="mb-3">
-        <strong>State Model</strong>
-    </div>
+    <div class="fw-600 font-20 mb-3">State Model</div>
 
     <ng-container *ngIf="!isSchemaFree">
         <p class='text-secondary mb-4 state-model-desc'>
