--- a/src/app/home/schema-builder/schema-builder.component.scss
+++ b/src/app/home/schema-builder/schema-builder.component.scss
@@ -53,7 +53,7 @@
   }
 
   #experience-side-nav {
-    width: 250px;
+    min-width: 250px;
     // border-right: 1px solid #DBDBDB;
 
     .side-nav-tab {
